--- a/PResumeContact/Index.html
+++ b/PResumeContact/Index.html
@@ -287,7 +287,7 @@
   });
 </script>
 <div style="text-align:center; margin-top:1.5rem;">
-    <a href="../index.html" class="btn">← Back to Home</a>
+    <a href="./index.html" class="btn">← Back to Home</a>
   </div>
 </body>
 </html>
