--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
           </a>
 
-          <a href="./PResumeContact/index.html" class="card card--wide">
+          <a href="contact.html" class="card card--wide">
             <div class="pixel-box">
               <h1>Resume & Contact</h1>
               <p>Get my resume, email, and links to connect.</p>
